# diligent-graph

./: .gitmodules  CMakeLists.txt  README.md
.github/workflows/: build.yml  cmake.yml
cmake/: diligent-graph-config.cmake
include/dg/core/: common.hpp  conversion.hpp  frustum.hpp  fwds.hpp  hash.hpp  math.hpp  method_string_interface.hpp  type_id.hpp
include/dg/geometry/: box_geometry.hpp  geometry.hpp  sphere_geometry.hpp
include/dg/gui/: ImGuiImplDiligent.hpp  imgui_impl_dg.hpp  imgui_integration.hpp
include/dg/input/: key_events.hpp  key_sequence.hpp  keys.hpp  mouse_events.hpp  shortcuts.hpp  string_utils.hpp
include/dg/internal/: pso_hash.hpp  pso_manager.hpp
include/dg/material/: basic_diffuse_material.hpp  color.hpp  common_constants.hpp  diffuse_material.hpp  dynamic_texture.hpp  material.hpp  shader_program.hpp  unlit_material.hpp
include/dg/objects/: assimp_mesh.hpp  canvas_drawing_layer.hpp  canvas_image_layer.hpp  canvas_manual_layer.hpp  canvas_object.hpp  geometry_object.hpp  gltf_mesh.hpp  manual_object.hpp  sphere_object.hpp
include/dg/platform/: cursor.hpp  render_window.hpp  window_events.hpp
include/dg/scene/: camera.hpp  node.hpp  object.hpp  raw_renderable.hpp  render_order.hpp  renderable.hpp  scene_manager.hpp
src/core/: frustum.cpp  type_id.cpp
src/geometry/: box_geometry.cpp  sphere_geometry.cpp
src/gui/: ImGuiImplDiligent.cpp  imgui_impl_dg.cpp  imgui_integration.cpp
src/input/: key_sequence.cpp  keys.cpp  shortcuts.cpp
src/internal/: pso_manager.cpp
src/material/: diffuse_material.cpp  dynamic_texture.cpp  shader_program.cpp  unlit_material.cpp
src/objects/: assimp_mesh.cpp  canvas_drawing_layer.cpp  canvas_image_layer.cpp  canvas_manual_layer.cpp  canvas_object.cpp  geometry_object.cpp  gltf_mesh.cpp  manual_object.cpp  sphere_object.cpp
src/platform/: render_window.cpp  render_window_private.hpp
src/platform/xcb/: xcb_keyboard.cpp  xcb_keyboard.hpp  xcb_opengl_render_window.cpp  xcb_render_window.cpp  xcb_render_window.hpp  xcb_vulkan_render_window.cpp
src/scene/: camera.cpp  node.cpp  object.cpp  scene_manager.cpp
tools/: CMakeLists.txt  ktxtool.cpp
